--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,7 +31,9 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
 file.reference.primefaces-5.3.jar=C:\\Users\\the joker\\Desktop\\work folder\\utilit\u00e9s\\util jasper\\lib\\primefaces-5.3.jar
+file.reference.primefaces-5.3.jar-1=..\\..\\lllllllll\\primefaces-5.3.jar
 file.reference.ui-lightness-1.0.9.jar=C:\\Users\\the joker\\Desktop\\best dev web\\ui-lightness-1.0.9.jar
+file.reference.ui-lightness-1.0.9.jar-1=..\\..\\lllllllll\\ui-lightness-1.0.9.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -47,7 +49,9 @@ j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
     ${file.reference.primefaces-5.3.jar}:\
-    ${file.reference.ui-lightness-1.0.9.jar}
+    ${file.reference.ui-lightness-1.0.9.jar}:\
+    ${file.reference.primefaces-5.3.jar-1}:\
+    ${file.reference.ui-lightness-1.0.9.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
